# ai-ta-backend

./: .env.dev  .env.example  .env.prod  .gitignore  README.md  backup_preserve_data.py  claude.md  debug_openai_calls.py  debug_problem_statement.py  pyproject.toml  requirements.txt  requirements_fixed.txt  run_migration.py  simple_test.py  test_full_api_flow.py  test_issue_fixes.py  test_structured_api.py  test_with_auth.py
app/: main.py
app/core/: config.py
app/database/: connection.py
app/database/migrations/: add_session_constraints.py
app/models/: __init__.py  base.py  core.py  enums.py  session.py
app/routers/: __init__.py  analytics.py  assignments.py  auth.py  code_execution.py  context.py  file_uploads.py  instructor_dashboard.py  intelligent_sessions.py  learning_profiles.py  progress.py  session_monitoring.py  sessions.py  structured_sessions.py
app/services/: __init__.py  ai_function_processor.py  ai_markdown_converter.py  ai_tutoring_engine.py  assignment_service.py  auth_service.py  cleanup_scheduler.py  code_execution_service.py  code_implementation_validator.py  code_understanding_verifier.py  context_compression.py  conversation_service.py  enhanced_logic_validator.py  enhanced_session_service.py  file_upload_service.py  input_classifier.py  intelligent_cache.py  learning_profile_service.py  openai_client.py  performance_monitor.py  problem_presenter.py  progress_service.py  prompt_manager.py  resume_detection.py  scenario_prompt_manager.py  session_analytics.py  session_manager.py  session_monitoring.py  session_service.py  smart_response_generator.py  structured_tutoring_engine.py  token_tracker.py  validation_types.py
app/utils/: response_formatter.py
tests/: test_code_implementation_validator.py  test_code_understanding_verifier.py  test_enhanced_logic_validator.py  test_intelligent_features.py  test_scenario_prompt_manager.py
